--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "wpe-build": "next build"
   },
   "dependencies": {
     "@emotion/core": "^10.0.28",
@@ -15,9 +16,9 @@
     "emotion-server": "^10.0.27",
     "lazysizes": "^5.2.2",
     "marked": "^1.1.1",
-    "next": "^9.5.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "next": "^9.5.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "swr": "^0.3.0"
   },
   "devDependencies": {
